Fix logo cropped on iOS

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -17,7 +17,7 @@ header {
     position: relative;
     top: 8px;
     color: rgba(255,255,255,0);
-    font-size: 25px;
+    font-size: 30px;
     background-image: url(./ekoengineering_logo.svg);
     background-size: 100%;
     background-repeat: no-repeat;
